# ComfyUI-Anima-PiD

./: .gitignore  README.md  __init__.py  nodes.py  pid_color_calib.safetensors  pid_core.py  pid_null_caption_gemma.safetensors  pyproject.toml
pid_net/: __init__.py  _stubs.py  pid_net.py  pixeldit_official.py
